<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--  Bell
    <item
        android:id="@+id/menu_toolbar_bell"
        android:title="Bell"
        android:icon="@drawable/bell1"
        app:showAsAction="always"></item>
-->

    <!-- Светофор -->
    <item
        android:id="@+id/action_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:actionLayout="@layout/status_light_menu_item"
        android:icon="@drawable/ic_3"
        android:title="Карта"
        app:showAsAction="always"></item>

    <!--  Обмен  -->
    <item
        android:id="@+id/menu_toolbar_exchange"
        android:title="Обмен"
        app:actionLayout="@layout/exchange_layout"
        app:showAsAction="always">
    </item>


    <!--  ...  -->
    <item
        android:id="@+id/action_to_main"
        android:orderInCategory="1"
        android:title="@string/go_to_main"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_to_wpdata"
        android:orderInCategory="5"
        android:title="@string/go_to_wpdata"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_photo_log"
        android:orderInCategory="10"
        android:title="@string/t_photo_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_info"
        android:orderInCategory="90"
        android:title="@string/info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_autosend"
        android:checkable="true"
        android:orderInCategory="95"
        android:title="@string/autosend"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="97"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>