<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_check"
        android:actionLayout="@layout/status_light_menu_item"
        android:icon="@mipmap/light_gray"
        android:title="@string/test_001"
        app:showAsAction="ifRoom">
        <menu>
<!--            <item   android:id="@+id/check_internet"
                android:icon="@mipmap/gray2"
                android:title="@string/t_check_internet" />-->
            <item   android:id="@+id/check_sever"
                android:icon="@mipmap/light_gray"
                android:title="@string/t_check_sever" />
<!--            <item   android:id="@+id/check_online"
                android:icon="@mipmap/light_gray"
                android:title="@string/t_check_online" />-->
            <item   android:id="@+id/check_Provider"
                android:icon="@mipmap/light_gray"
                android:title="@string/t_check_Provider" >
                <menu>
                    <item   android:id="@+id/check_GPS"
                        android:icon="@mipmap/light_gray"
                        android:title="@string/t_check_GPS" />
                    <item   android:id="@+id/check_NET"
                        android:icon="@mipmap/light_gray"
                        android:title="@string/t_check_NET" />
                </menu>
            </item>
<!--            <item   android:id="@+id/check_MP"
                android:icon="@mipmap/light_gray"
                android:title="@string/t_check_MP" />-->
<!--            <item   android:id="@+id/check_version"
                android:icon="@mipmap/light_gray"
                android:title="@string/t_check_version" />-->
        </menu>
    </item>


    <item
        android:id="@+id/exchange"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="Омбен 2"

        app:actionLayout="@layout/exchange_layout"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/exchange_photo1"
                android:title="Выгрузка фото залупка 1" />
            <item android:id="@+id/exchange_db1"
                android:title="Синхронизация залупка 2" />
        </menu>
    </item>

    <item
        android:id="@+id/action_photo_count"
        android:actionLayout="@layout/feed_update_count"
        android:icon="@drawable/shape_notification"
        android:title=""
        android:visible="false"
        app:actionViewClass="android.widget.ToggleButton"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/exchange_photo"
                android:title="Выгрузка фото" />
            <item android:id="@+id/exchange_db"
                android:title="Синхронизация" />
        </menu>
    </item>




    <item
        android:id="@+id/action_to_main"
        android:orderInCategory="1"
        android:title="@string/go_to_main"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_to_wpdata"
        android:orderInCategory="5"
        android:title="@string/go_to_wpdata"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_photo_log"
        android:orderInCategory="10"
        android:title="@string/t_photo_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_info"
        android:orderInCategory="90"
        android:title="@string/info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_autosend"
        android:checkable="true"
        android:orderInCategory="95"
        android:title="@string/autosend"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>