<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colotSelectedTab"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/red_dot"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:elevation="25dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/fab"
        app:layout_constraintTop_toTopOf="@+id/fab"
        app:srcCompat="@drawable/selector_rounded_button_red" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="#FFFFFF"
        app:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_question_1" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_viber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="#FFFFFF"
        app:elevation="20dp"
        app:maxImageSize="40dp"
        app:layout_constraintBottom_toTopOf="@id/fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_viber" />

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/titleDetailedReport"
        android:layout_width="276dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/title_detailed_report"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        style="@style/TabStyle"
        android:background="@color/colorUnselectedTab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_tab_tar_0" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_tab_1" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabTovars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_tab_tar_3" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabTar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_tab_3" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" >

    </androidx.viewpager2.widget.ViewPager2>


</androidx.constraintlayout.widget.ConstraintLayout>