<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButtonCall"
        tools:visibility="visible"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/selector_rounded_button"
        android:contentDescription="@string/telephone_call"
        android:padding="6dp"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonVideoLesson"
        app:layout_constraintTop_toTopOf="@+id/imageButtonVideoLesson"
        app:srcCompat="@drawable/ic_81" />

    <ImageButton
        android:id="@+id/imageButtonVideoLesson"
        tools:visibility="visible"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/selector_rounded_button"
        android:contentDescription="@string/video_prompt"
        android:paddingStart="13dp"
        android:paddingLeft="13dp"
        android:paddingTop="0dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="0dp"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonLesson"
        app:layout_constraintTop_toTopOf="@+id/imageButtonLesson"
        app:srcCompat="@drawable/ic_play" />

    <ImageButton
        android:id="@+id/imageButtonLesson"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/selector_rounded_button"
        android:contentDescription="@string/prompt"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonClose"
        app:layout_constraintTop_toTopOf="@+id/imageButtonClose"
        app:srcCompat="@drawable/ic_question_1"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/imageButtonClose"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_rounded_button"
        android:contentDescription="@string/close"
        android:padding="9dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="@+id/contentLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_letter_x" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonClose"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoTo" />

        <ImageView
            android:id="@+id/photoTo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/photoAfter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:srcCompat="@mipmap/merchik" />

        <ImageView
            android:id="@+id/photoAfter"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/photoTo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/photoTo"
            app:layout_constraintTop_toTopOf="@+id/photoTo"
            app:srcCompat="@mipmap/merchik" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>